# TinyThinker

./: .gitignore  README.md  artifacts.py  build_memmap.py  chars.txt  config.py  corpus_int32.npy  gitignore  input.txt  model.py  prompt.py  pyproject.toml  runtime.py  tokenizer.py  train.py
notebooks/: train_tinythinker_colab.ipynb
tests/: test_build_memmap.py  test_checkpoint_roundtrip.py  test_generate.py  test_tokenizer.py  test_train_smoke.py
