[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinythinker"
version = "0.1.0"
description = "A small GPT-style language model with thinking token support"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "torch>=2.1",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
